--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Mirza Sabbir</title>
+    <link rel="stylesheet" href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="banner">
+        <div class="width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Mirza</span> <span class="new">Sabbir</span> Website!</h1>
+            <h3>My Personal Information:-</h3>
+            <ul>
+                <li>Name: Mirza Sabbir</li>
+                <li>Profation: Student</li>
+                <li>Address: Khulna</li>
+                <li>Interested: Learning Web Development</li>
+            </ul>
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=23oxCvVhvF4&list=RD23oxCvVhvF4&start_radio=1">You
+                Tube</a>
+        </div>
+        <div class="width">
+            <img src="pic/sabbir-pic.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
