--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
             <img src="pic/sabbir-pic.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="width">
+            <img src="pic/sabbir-pic1.png" alt="">
+        </div>
+        <div class="width">
+            <h1>My Dream</h1>
+            <h2>I want to be a Fullstack Developer</h2>
+            <p>I will work hard.To be a perfect web Developer.The rest is up to Allah. </p>
+
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=23oxCvVhvF4&list=RD23oxCvVhvF4&start_radio=1">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
