footer and exprences added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="banner">
+    <section class="banner new-change">
         <div class="width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Mirza</span> <span class="new">Sabbir</span> Website!</h1>
@@ -28,23 +28,43 @@
                 href="https://www.youtube.com/watch?v=23oxCvVhvF4&list=RD23oxCvVhvF4&start_radio=1">You
                 Tube</a>
         </div>
-        <div class="width">
+        <div class="width ">
             <img src="pic/sabbir-pic.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big new-change">
         <div class="width">
             <img src="pic/sabbir-pic1.png" alt="">
         </div>
         <div class="width">
             <h1>My Dream</h1>
-            <h2>I want to be a Fullstack Developer</h2>
+            <h2>I want to be a <span class="sabbir">Full</span><span class="sabbir1">Stack</span><span
+                    class="sabbir2">Developer</span></h2>
             <p>I will work hard.To be a perfect web Developer.The rest is up to Allah. </p>
 
             <a class="link-button" target="_blank"
                 href="https://www.youtube.com/watch?v=23oxCvVhvF4&list=RD23oxCvVhvF4&start_radio=1">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="mirza">
+        <h1 id="exp">Experiences</h1>
+        <div class="new-change">
+            <div id="full-stack" class="experiences">
+                <h2>Full Stack Developer</h2>
+                <h3><span class="mirza1"> 2022-</span><span class="mirza2">present | Pro Level Web Developer</span>
+                </h3>
+                <p>I am so happy now.Becouse i am succed.Expressing gratitude to Allah.</p>
+            </div>
+            <div id="rakib" class="experiences">
+                <h2>New Experiences</h2>
+                <h3><span class="mirza1">2021-</span><span class="mirza2">present | Learning Web Developing</span> </h3>
+                <p>I am working hard.Inshaallah i will achive my aim.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
