--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3>My Personal Information:-</h3>
             <ul>
                 <li>Name: Mirza Sabbir</li>
-                <li>Profation: Student</li>
+                <li>Profession: Student</li>
                 <li>Address: Khulna</li>
                 <li>Interested: Learning Web Development</li>
             </ul>
